--- a/hotjar-clone/src/AllPages/Home/HomePart3.module.css
+++ b/hotjar-clone/src/AllPages/Home/HomePart3.module.css
@@ -1,13 +1,13 @@
 .firstBox1>img{
     width: 100%;
-    padding: 10px;
+    padding: 15px;
     
 }
 
 .firstBox1 {
     position: relative;
-    width: 50%;
-    height: 360px;
+    width: 100%;
+    height: 400px;
   }
   
   .image {
@@ -34,15 +34,17 @@
   }
   
   .text {
+    width: 100%;
+    margin-top: 20px;
     color: black !important;
-    font-size: 20px;
+    font-size: 18px;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 20%;
+    left: 30%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    text-align: center;
+    /* text-align: center; */
   }
   .link{
     color: blue;
