--- a/hotjar-clone/src/App.css
+++ b/hotjar-clone/src/App.css
@@ -3,6 +3,14 @@
   /* background-color: rgb(32,38,65);
   color: white; */
 }
+.dark{
+  background-color: black;
+  color: white;
+}
+.light{
+  background-color: white;
+  color: black;
+}
 
 .App-logo {
   height: 40vmin;
