--- a/hotjar-clone/src/Components/Nav.module.css
+++ b/hotjar-clone/src/Components/Nav.module.css
@@ -13,3 +13,31 @@
     height: 22px;
     margin-top: 10px;
 }
+
+
+
+
+.active {
+    color: red;
+    text-decoration: none;
+    padding: 2rem;
+    
+  }
+  .default {
+    color: black;
+    text-decoration: none;
+    padding: 2rem;
+  }
+.navbar{
+    border-bottom: 2px solid black;
+    font-size: 17px;
+    padding: 10px;
+   
+}  
+
+.navDiv1{
+  margin-left: 1px;
+}
+.navDiv1>a{
+  margin-left: 20px;
+}
